syntax = "proto3";

option csharp_namespace = "Jobly.Protobufs.Authorization.Client";

import "Authorization/auth.proto";

service AuthorizationGrpcService {
	rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}